United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7032388 guarantee(VM_Version::supports_cmov()) failed: illegal instruction on i586 after 6919934
7032388 : guarantee(VM_Version::supports_cmov()) failed: illegal instruction on i586 after 6919934

Details
Type:
Bug
Submit Date:
2011-03-30
Status:
Closed
Updated Date:
2011-04-24
Project Name:
JDK
Resolved Date:
2011-04-24
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs21
Fixed Versions:
hs21

Related Reports
Backport:
Relates:

Sub Tasks

Description
http://mail.openjdk.java.net/pipermail/hotspot-dev/2011-March/004006.html

A bug was filed with the IcedTea project:

http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=682

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/09f96c3ff1ad
                                     
2011-03-31
EVALUATION

6919934 added some unguarded cmov instructions which hit that guarantee on older hardware.
                                     
2011-03-30



Hardware and Software, Engineered to Work Together