7032388: guarantee(VM_Version::supports_cmov()) failed: illegal instruction on i586 after 6919934

6919934 added some unguarded cmov instructions which hit a guarantee on older hardware.

Reviewed-by: never, iveresov, kvn, phh